@@ -24,8 +24,9 @@
    * Fix minor label issue at startup - thx Bill
    * Keep bookmarks after edit in source view - thx Ingo
    * Fix crash on very very long text lines
-   * Fix bug with multi-line-bold in export/box-for-each-line - thx thehulk
-   * Fix a few shortcuts for menu items - thx LiMa79#4271
+   * Fix bug in export multi-line-bold/box-for-each-line - thx thehulk
+   * Fix shortcut validation for a few menu items - thx LiMa79#4271
+   * Fix web color to hex color in DCinema - thx Antonio
 
 
 3.5.16 (16th June 2020)
